--- a/src/projects.json
+++ b/src/projects.json
@@ -1,6 +1,15 @@
 [
     {
         "id": 1,
+        "name": "Mustfit Pets",
+        "description": "Full stack MERN application to match harder-to-adopt pets with potential owners. Shelter staff can submit pets for adoption. Adopters can search for pets and save pets to their dashboard. Pets can be removed from your dashboard",
+        "image": "mustfit.jpg",
+        "tech": "React | MongoDB | Graphql | Node.js | Mongoose | Apollo Client | PWA | BCrypt | JWT Toekn | Faker | Heroku",
+        "deploy": "https://quiet-refuge-60774.herokuapp.com/",
+        "github": "https://github.com/calistamayer/pet-adoption"
+    },
+    {
+        "id": 3,
         "name": "The Tech Blog",
         "description": "A full stack CMS blog designed in the MVC paradigm. Users sign up and log in.  Post, update and delete blog posts. Comment on posts. Password encrypted. SQL storage.",
         "image": "tech_blog.jpg",
@@ -18,7 +27,7 @@
         "github": "https://github.com/webprinc3ss/the-adventure-series"
     },
     {
-        "id": 6,
+        "id": 4,
         "name": "Weather Map",
         "description": "Planning a trip? Compare weather in your destination cities! Most-viewed cities are saved alphabetically descending in Local Storage and displayed on the page.",
         "image": "redrock.jpg",
@@ -27,7 +36,7 @@
         "github": "https://github.com/webprinc3ss/weather-dashboard"
     },
     {
-        "id": 2,
+        "id": 5,
         "name": "Budget Tracker",
         "description": "A budget tracker for the traveler to keep track of expenses with or without a data connection. Can be saved as a PWA to one's device.",
         "image": "budget_tracker.png",
@@ -36,7 +45,7 @@
         "github": "https://github.com/webprinc3ss/budget-tracker"
     },
     {
-        "id": 1,
+        "id": 6,
         "name": "Code Quiz",
         "description": "A JavaScript quiz to test a user's coding knowledge. A timer counts down and wrong/correct answers are indicated. High scores saved to Local Storage.",
         "image": "codequiz_screenshot.png",
@@ -45,7 +54,7 @@
         "github": "https://github.com/webprinc3ss/code-quiz"
     },
     {
-        "id": 5,
+        "id": 7,
         "name": " Work-Day Scheduler",
         "description": "Plan your workday with this scheduling app that saves your tasks to local storage. During the hours of 9-5 tasks are color-coded to indicate past, present and future.",
         "image": "scheduler.png",
