--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.1.1",
     "react-scripts": "4.0.2",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
